--- a/contact.html
+++ b/contact.html
@@ -32,13 +32,13 @@
 				<div class="header-top-bar">
 					<ul class="contact-details clearfix">
 						<li class="template-phone">
-							(520) 577 2710
+							08-9353422
 						</li>
 						<li class="template-mail">
 							<a href="mailto:aazmaor@walla.co.il">aazmaor@walla.co.il</a>
 						</li>
 						<li class="template-clock">
-							Mon - Fri: 7:30am - 5:30pm
+							א׳- ה׳ : 7:30 - 17:00 ו׳ : 7:30-14:00
 						</li>
 					</ul>
 					<div class="search-container">
@@ -236,7 +236,7 @@
 											</li>
 										</ul>
 									</li>
-									<li>
+									<!-- <li>
 										<a href="about.html" title="עמודים">
 											עמודים
 										</a>
@@ -309,7 +309,7 @@
 										<a href="appointment.html" title="קביעת תור">
 											קביעת תור
 										</a>
-									</li>
+									</li> -->
 									<li class="left-flyout">
 										<a href="contact.html" title="צור קשר">
 											צור קשר
@@ -536,7 +536,7 @@
 									<h5>CALL US NOW AT</h5>
 									<div class="icon sl-small-phone-circle"></div>
 									<p>
-										Mobile: (520) 577 2710<br>
+										Mobile: 08-9353422<br>
 										Assistance: (520) 577 2725<br>
 										Weekdays: (520) 577 7212
 									</p>
@@ -600,7 +600,7 @@
 						<ul class="list simple margin-top-20">
 							<li>Tucson, Arizona 80210</li>
 							<li>501 Archwood Lane</li>
-							<li><span>Mobile:</span>(520) 577 2710</li>
+							<li><span>Mobile:</span>08-9353422</li>
 							<li><span>Assistance:</span>(520) 577 2725</li>
 							<li><span>E-mail:</span><a href="mailto:aazmaor@walla.co.il">aazmaor@walla.co.il</a></li>
 						</ul>
