--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 				<div class="vertical-align-table column-1-1">
 					<div class="header clearfix">
 						<div class="logo vertical-align-cell">
-							<h1><a href="home" title="CarService">מוסך א.א.צ מאור</a></h1>
+							<h1><a href="index.html" title="CarService">מוסך א.א.צ מאור</a></h1>
 						</div>
 						<a href="#" class="mobile-menu-switch vertical-align-cell">
 							<span class="line"></span>
@@ -237,7 +237,7 @@
 											</li>
 										</ul>
 									</li>
-									<li>
+									<!-- <li>
 										<a href="about.html" title="עמודים">
 											עמודים
 										</a>
@@ -310,7 +310,7 @@
 										<a href="appointment.html" title="קביעת תור">
 											קביעת תור
 										</a>
-									</li>
+									</li> -->
 									<li class="left-flyout">
 										<a href="contact.html" title="צור קשר">
 											צור קשר
