--- a/index.html
+++ b/index.html
@@ -340,39 +340,39 @@
 											</a>
 										</li>
 										<li>
-											<a href="services.html" title="Services">
-												Services
+											<a href="services.html" title="שירותים">
+												שירותים
 											</a>
 											<a href="#" class="template-arrow-menu"></a>
 											<ul>
 												<li>
-													<a href="service_engine_diagnostics.html" title="Engine Diagnostics">
-														Engine Diagnostics
+													<a href="service_engine_diagnostics.html" title="דיאגנוסיטיקת מנוע">
+														דיאגנוסיטיקת מנוע
 													</a>
 												</li>
 												<li>
-													<a href="service_lube_oil_filters.html" title="Lube, Oil and Filters">
-														Lube, Oil and Filters
+													<a href="service_lube_oil_filters.html" title="שמנים, נוזלים ופילטרים">
+														שמנים, נוזלים ופילטרים
 													</a>
 												</li>
 												<li>
-													<a href="service_belts_hoses.html" title="Belts and Hoses">
-														Belts and Hoses
+													<a href="service_belts_hoses.html" title="חגורות ורצועות">
+														חגורות ורצועות
 													</a>
 												</li>
 												<li>
-													<a href="service_air_conditioning.html" title="Air Conditioning">
-														Air Conditioning
+													<a href="service_air_conditioning.html" title="מיזוג אוויר">
+														מיזוג אוויר
 													</a>
 												</li>
 												<li>
-													<a href="service_brake_repair.html" title="Brake Repair">
-														Brake Repair
+													<a href="service_brake_repair.html" title="תיקון ברקסים">
+														תיקון ברקסים
 													</a>
 												</li>
 												<li>
-													<a href="service_tire_wheel.html" title="Tire and Wheel Services">
-														Tire and Wheel Services
+													<a href="service_tire_wheel.html" title="החלפת צמיגים וגלגלים">
+														החלפת צמיגים וגלגלים
 													</a>
 												</li>
 											</ul>
