--- a/contact.html
+++ b/contact.html
@@ -648,21 +648,21 @@
 						</ul>
 					</div>
 					<div class="column column-1-4">
-						<h6 class="box-header">HOURS</h6>
+						<h6 class="box-header">שעות פעילות</h6>
 						<ul class="list simple margin-top-20">
-							<li><span>Monday:</span>7:30am - 5:30pm</li>
-							<li><span>Tuesday:</span>7:30am - 5:30pm</li>
-							<li><span>Wednesday:</span>7:30am - 5:30pm</li>
-							<li><span>Thursday:</span>7:30am - 5:30pm</li>
-							<li><span>Friday:</span>7:30am - 5:30pm</li>
-							<li><span>Saturday:</span>7:30am - 3:00pm</li>
-							<li><span>Sunday:</span>Closed</li>
+							<li><span>17:30 - 07:30</span>ראשון:</li>
+							<li><span>17:30 - 07:30</span>שני:</li>
+							<li><span>17:30 - 07:30</span>שלישי:</li>
+							<li><span>17:30 - 07:30</span>רביעי:</li>
+							<li><span>17:30 - 07:30</span>חמישי:</li>
+							<li><span>15:00 - 07:30</span>שישי:</li>
+							<li><span>סגור</span>שבת:</li>
 						</ul>
 					</div>
 				</div>
 			</div>
 			<div class="row align-center padding-top-bottom-30">
-				<span class="copyright">© Copyright 2015 <a href="http://themeforest.net/item/carservice-mechanic-auto-shop-template/12332985?ref=QuanticaLabs" title="Carservice Template" target="_blank">Carservice Template</a> by <a href="http://quanticalabs.com" title="QuanticaLabs" target="_blank">QuanticaLabs</a></span>
+				<span class="copyright">© כל הזכויות שמורות 2017 <a href="#" title="Carservice Template" target="_self">מוסך א.א.צ מאור</a></span>
 			</div>
 		</div>
 		<a href="#top" class="scroll-top animated-element template-arrow-up" title="Scroll to top"></a>
@@ -687,7 +687,6 @@
 		<script type="text/javascript" src="js/jquery.prettyPhoto.js"></script>
 		<script type="text/javascript" src="js/jquery.qtip.min.js"></script>
 		<script type="text/javascript" src="js/jquery.blockUI.min.js"></script>
-		<script type="text/javascript" src="//maps.google.com/maps/api/js?key=YOUR_API_KEY"></script>
 		<script type="text/javascript" src="js/main.js"></script>
 		<script type="text/javascript" src="js/odometer.min.js"></script>
 	</body>
