--- a/contact.html
+++ b/contact.html
@@ -593,77 +593,76 @@
 					</div>
 				</div>
 			</div>
-			<div class="row dark-gray footer-row full-width padding-top-30 padding-bottom-50">
-				<div class="row row-4-4">
-					<div class="column column-1-4">
-						<h6 class="box-header">ABOUT US</h6>
-						<ul class="list simple margin-top-20">
-							<li>Tucson, Arizona 80210</li>
-							<li>501 Archwood Lane</li>
-							<li><span>Mobile:</span>08-9353422</li>
-							<li><span>Assistance:</span>(520) 577 2725</li>
-							<li><span>E-mail:</span><a href="mailto:aazmaor@walla.co.il">aazmaor@walla.co.il</a></li>
-						</ul>
-						<ul class="social-icons gray margin-top-26">
-							<li>
-								<a target="_blank" href="http://facebook.com/QuanticaLabs" class="social-facebook" title="facebook"></a>
-							</li>
-							<li>
-								<a target="_blank" href="https://twitter.com/QuanticaLabs" class="social-twitter" title="twitter"></a>
-							</li>
-							<li>
-								<a target="_blank" href="http://themeforest.net/user/QuanticaLabs/portfolio?ref=QuanticaLabs" class="social-linkedin" title="linkedin"></a>
-							</li>
-							<li>
-								<a href="https://pinterest.com/quanticalabs/" class="social-pinterest" title="pinterest"></a>
-							</li>
-						</ul>
-					</div>
-					<div class="column column-1-4">
-						<h6 class="box-header">OUR SERVICES</h6>
-						<ul class="list margin-top-20">
-							<li class="template-bullet">Engine Diagnostics</li>
-							<li class="template-bullet">Lube, Oil and Filters</li>
-							<li class="template-bullet">Belts and Hoses</li>
-							<li class="template-bullet">Air Conditioning</li>
-							<li class="template-bullet">Brake Repair</li>
-							<li class="template-bullet">Tire and Wheel Services</li>
-							<li class="template-bullet">Other Car Services</li>
-						</ul>
-					</div>
-					<div class="column column-1-4">
-						<h6 class="box-header">POPULAR TAGS</h6>
-						<ul class="taxonomies margin-top-30">
-							<li><a href="category.html" title="BELTS">BELTS</a></li>
-							<li><a href="category.html" title="BRAKES">BRAKES</a></li>
-							<li><a href="category.html" title="DIAGNOSTICS">DIAGNOSTICS</a></li>
-							<li><a href="category.html" title="ENGINE">ENGINE</a></li>
-							<li><a href="category.html" title="FILTERS">FILTERS</a></li>
-							<li><a href="category.html" title="HEATING">HEATING</a></li>
-							<li><a href="category.html" title="OILS">OILS</a></li>
-							<li><a href="category.html" title="STEERING">STEERING</a></li>
-							<li><a href="category.html" title="SUSPENSION">SUSPENSION</a></li>
-							<li><a href="category.html" title="TIRES">TIRES</a></li>
-							<li><a href="category.html" title="TRANSMISSION">TRANSMISSION</a></li>
-						</ul>
-					</div>
-					<div class="column column-1-4">
-						<h6 class="box-header">שעות פעילות</h6>
-						<ul class="list simple margin-top-20">
-							<li><span>17:30 - 07:30</span>ראשון:</li>
-							<li><span>17:30 - 07:30</span>שני:</li>
-							<li><span>17:30 - 07:30</span>שלישי:</li>
-							<li><span>17:30 - 07:30</span>רביעי:</li>
-							<li><span>17:30 - 07:30</span>חמישי:</li>
-							<li><span>15:00 - 07:30</span>שישי:</li>
-							<li><span>סגור</span>שבת:</li>
-						</ul>
-					</div>
+			<div class="row row-4-4 top-border page-padding-top">
+				<div class="column column-1-4">
+					<h6 class="box-header">אודות</h6>
+					<ul class="list simple margin-top-20">
+						<li>יוסף קלאוזנר 29</li>
+						<li>רמלה</li>
+						<li><span></span>08-9353422</li>
+						<li><span></span>08-9353422</li>
+						<li><span></span><a href="mailto:aazmaor@walla.co.il">aazmaor@walla.co.il</a></li>
+					</ul>
+					<ul class="social-icons gray margin-top-26">
+						<!-- <li>
+                            <a target="_blank" href="http://facebook.com/QuanticaLabs" class="social-facebook" title="facebook"></a>
+                        </li>
+                        <li>
+                            <a target="_blank" href="https://twitter.com/QuanticaLabs" class="social-twitter" title="twitter"></a>
+                        </li>
+                        <li>
+                            <a target="_blank" href="http://themeforest.net/user/QuanticaLabs/portfolio?ref=QuanticaLabs" class="social-linkedin" title="linkedin"></a>
+                        </li>
+                        <li>
+                            <a href="https://pinterest.com/quanticalabs/" class="social-pinterest" title="pinterest"></a>
+                        </li> -->
+					</ul>
+				</div>
+				<div class="column column-1-4">
+					<h6 class="box-header">השירותים שלנו</h6>
+					<ul class="list margin-top-20">
+						<li>סיכה, שמן ופילטרים</li>
+						<li>רצועות הינע וצינורות</li>
+						<li>מיזוג אוויר</li>
+						<li>תיקוני בלמים</li>
+						<li>צמיגים</li>
+						<li>שירותי רכב אחרים</li>
+					</ul>
+				</div>
+				<div class="column column-1-4">
+
+					<h6 class="box-header">.</h6>
+					<!-- <h6 class="box-header">תגית פופולריות</h6>
+                        <li><a href="category.html" title="BELTS">BELTS</a></li>
+                        <li><a href="category.html" title="BRAKES">BRAKES</a></li>
+                        <li><a href="category.html" title="DIAGNOSTICS">DIAGNOSTICS</a></li>
+                        <li><a href="category.html" title="ENGINE">ENGINE</a></li>
+                        <li><a href="category.html" title="FILTERS">FILTERS</a></li>
+                        <li><a href="category.html" title="HEATING">HEATING</a></li>
+                        <li><a href="category.html" title="OILS">OILS</a></li>
+                        <li><a href="category.html" title="STEERING">STEERING</a></li>
+                        <li><a href="category.html" title="SUSPENSION">SUSPENSION</a></li>
+                        <li><a href="category.html" title="TIRES">TIRES</a></li>
+                        <li><a href="category.html" title="TRANSMISSION">TRANSMISSION</a></li>
+                    </ul> -->
+				</div>
+				<div class="column column-1-4">
+					<h6 class="box-header">שעות פעילות</h6>
+					<ul class="list simple margin-top-20">
+						<li><span>17:30 - 07:30</span>ראשון:</li>
+						<li><span>17:30 - 07:30</span>שני:</li>
+						<li><span>17:30 - 07:30</span>שלישי:</li>
+						<li><span>17:30 - 07:30</span>רביעי:</li>
+						<li><span>17:30 - 07:30</span>חמישי:</li>
+						<li><span>15:00 - 07:30</span>שישי:</li>
+						<li><span>סגור</span>שבת:</li>
+					</ul>
 				</div>
 			</div>
-			<div class="row align-center padding-top-bottom-30">
-				<span class="copyright">© כל הזכויות שמורות 2017 <a href="#" title="Carservice Template" target="_self">מוסך א.א.צ מאור</a></span>
-			</div>
+		</div>
+		<div class="row align-center padding-top-bottom-30">
+			<span class="copyright">© כל הזכויות שמורות 2017 <a href="#" title="Carservice Template" target="_self">מוסך א.א.צ מאור</a></span>
+		</div>
 		</div>
 		<a href="#top" class="scroll-top animated-element template-arrow-up" title="Scroll to top"></a>
 		<div class="background-overlay"></div>
