--- a/contact.html
+++ b/contact.html
@@ -630,9 +630,9 @@
 							<li>שירותי רכב אחרים</li>
 						</ul>
 					</div>
-					<div class="column column-1-4">
+					 <div class="column column-1-4">
 
-						<h6 class="box-header">.</h6>
+						<h6 class="box-header"> <br> </h6>
 						<!-- <h6 class="box-header">תגית פופולריות</h6>
 							<li><a href="category.html" title="BELTS">BELTS</a></li>
 							<li><a href="category.html" title="BRAKES">BRAKES</a></li>
@@ -687,7 +687,7 @@
 		<script type="text/javascript" src="js/jquery.prettyPhoto.js"></script>
 		<script type="text/javascript" src="js/jquery.qtip.min.js"></script>
 		<script type="text/javascript" src="js/jquery.blockUI.min.js"></script>
-		<script type="text/javascript" src="//maps.google.com/maps/api/js?key=YOUR_API_KEY"></script>
+		<script type="text/javascript" src="//maps.google.com/maps/api/js?key=AIzaSyBYAM1Hj4k_N476ga2-NhvRZzjuY9xkaes"></script>
 		<script type="text/javascript" src="js/main.js"></script>
 		<script type="text/javascript" src="js/odometer.min.js"></script>
 	</body>
