--- a/index.html
+++ b/index.html
@@ -1152,7 +1152,7 @@
 					</div>
 					<div class="column column-1-4">
 
-						<h6 class="box-header">.</h6>
+						<h6 class="box-header"><br></h6>
 						<!-- <h6 class="box-header">תגית פופולריות</h6>
 							<li><a href="category.html" title="BELTS">BELTS</a></li>
 							<li><a href="category.html" title="BRAKES">BRAKES</a></li>
