--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
 							</fieldset>
 						</form>
 					</div>
-					<ul class="social-icons">
+					<!-- <ul class="social-icons">
 						<li>
 							<a target="_blank" href="http://facebook.com/QuanticaLabs" class="social-facebook" title="facebook"></a>
 						</li>
@@ -60,7 +60,7 @@
 						</li>
 						<li>
 							<a href="https://pinterest.com/quanticalabs/" class="social-pinterest" title="pinterest"></a>
-						</li>
+						</li> -->
 						<!--<li>
 							<a title="" href="http://themeforest.net/user/QuanticaLabs?ref=QuanticaLabs" class="social-google-plus"></a>
 						</li>
