--- a/contact.html
+++ b/contact.html
@@ -51,16 +51,16 @@
 							</fieldset>
 						</form>
 					</div>
-					<!-- <ul class="social-icons">
-						<li>
-							<a target="_blank" href="http://facebook.com/QuanticaLabs" class="social-facebook" title="facebook"></a>
-						</li>
-						<li>
-							<a target="_blank" href="https://twitter.com/QuanticaLabs" class="social-twitter" title="twitter"></a>
-						</li>
-						<li>
-							<a href="https://pinterest.com/quanticalabs/" class="social-pinterest" title="pinterest"></a>
-						</li> -->
+					<ul class="social-icons">
+						<!-- 	<li>
+                                <a target="_blank" href="http://facebook.com/QuanticaLabs" class="social-facebook" title="facebook"></a>
+                            </li>
+                            <li>
+                                <a target="_blank" href="https://twitter.com/QuanticaLabs" class="social-twitter" title="twitter"></a>
+                            </li>
+                            <li>
+                                <a href="https://pinterest.com/quanticalabs/" class="social-pinterest" title="pinterest"></a>
+                            </li> -->
 						<!--<li>
 							<a title="" href="http://themeforest.net/user/QuanticaLabs?ref=QuanticaLabs" class="social-google-plus"></a>
 						</li>
