--- a/contact.html
+++ b/contact.html
@@ -533,12 +533,12 @@
 						<div class="column column-1-3">
 							<ul class="features-list">
 								<li>
-									<h5>CALL US NOW AT</h5>
+									<h5>צרו קשר</h5>
 									<div class="icon sl-small-phone-circle"></div>
 									<p>
-										Mobile: 08-9353422<br>
-										Assistance: (520) 577 2725<br>
-										Weekdays: (520) 577 7212
+										טלפון:<a href="tel:08-9353422"> 08-9353422 </a><br>
+										מייל: <a href="mailto:aazmaor@walla.co.il">aazmaor@walla.co.il</a><br>
+
 									</p>
 								</li>
 							</ul>
@@ -546,12 +546,12 @@
 						<div class="column column-1-3">
 							<ul class="features-list">
 								<li>
-									<h5>TUCSON CAR SERVICE</h5>
+									<h5>כתובת</h5>
 									<div class="icon sl-small-location-map"></div>
 									<p>
-										Tucson, Arizona 80210<br>
-										501 Archwood Lane<br>
-										<a target="_blank" href="//www.google.pl/maps/place/Tucson,+Arizona,+Stany+Zjednoczone/@32.15591,-110.883805,11z/data=!3m1!4b1!4m2!3m1!1s0x86d665410b2ced2b:0x73c32d384d16c715">Display on Map</a>
+										יוסף קלאוזנר 29<br>
+										רמלה<br>
+										<a target="_blank" href="//google.co.il/maps/place/יוסף+קלוזנר+29,+רמלה%E2%80%AD/@31.9205602,34.8781485,17z/data=!3m1!4b1!4m5!3m4!1s0x1502c9f7ca73117f:0x2e6e4aa7b9e188fc!8m2!3d31.9205602!4d34.8759598?hl=iw">הצג מפה</a>
 									</p>
 								</li>
 							</ul>
@@ -567,7 +567,7 @@
 						</div>
 					</div>
 					<div class="row page-margin-top">
-						<form class="contact-form" id="contact-form" method="post" action="html/contact_form/contact_form.php">
+					<!--	<form class="contact-form" id="contact-form" method="post" action="html/contact_form/contact_form.php">
 							<div class="row">
 								<fieldset class="column column-1-2">
 									<input class="text-input" name="name" type="text" value="Your Name *" placeholder="Your Name *">
@@ -589,7 +589,7 @@
 									</div>
 								</div>
 							</div>
-						</form>
+						</form> -->
 					</div>
 				</div>
 			</div>
