--- a/index.html
+++ b/index.html
@@ -1108,7 +1108,7 @@
 					<div class="column column-1-3">
 						<!-- <ul class="contact-details-list">
 							<li class="sl-small-truck-tow">
-								<p>24/7 תיקוני דרכים<br>
+								<p> תיקוני דרך<br>
 									08-9353422</p>
 							</li>
 						</ul> -->
