--- a/contact.html
+++ b/contact.html
@@ -559,9 +559,9 @@
 						<div class="column column-1-3">
 							<ul class="features-list">
 								<li>
-									<h5>24/7 ASSISTANCE</h5>
+									<h5>תיקוני דרך</h5>
 									<div class="icon sl-small-truck-tow"></div>
-									<p>Services consequat luctus at justo auctor metus est donec. Tempus terminal morbi nulla donec elite maecenas.</p>
+									<p>תיקוני דרך בשעות פעילות המוסך</p>
 								</li>
 							</ul>
 						</div>
