--- a/index.html
+++ b/index.html
@@ -1106,12 +1106,12 @@
 						</ul>
 					</div>
 					<div class="column column-1-3">
-						<!-- <ul class="contact-details-list">
+						 <ul class="contact-details-list">
 							<li class="sl-small-truck-tow">
 								<p> תיקוני דרך<br>
-									08-9353422</p>
+									<p>בשעות פעילות המוסך</p>
 							</li>
-						</ul> -->
+						</ul>
 					</div>
 				</div>
 				<div class="row row-4-4 top-border page-padding-top">
