--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
 				<div class="header-top-bar">
 					<ul class="contact-details clearfix">
 						<li class="template-phone">
-							<a href="tel:08-9353422>08-9353422</a>
+							<a href="tel:089353422">08-9353422</a>
 						</li>
 						<li class="template-mail">
 							<a href="mailto:aazmaor@walla.co.il">aazmaor@walla.co.il</a>
