--- a/index.html
+++ b/index.html
@@ -1109,7 +1109,7 @@
 						 <ul class="contact-details-list">
 							<li class="sl-small-truck-tow">
 								<p> תיקוני דרך<br>
-									<p>בשעות פעילות המוסך</p>
+									בשעות פעילות המוסך</p>
 							</li>
 						</ul>
 					</div>
