--- a/services.html
+++ b/services.html
@@ -529,10 +529,10 @@
 				<div class="row gray full-width page-header vertical-align-table">
 					<div class="row full-width padding-top-bottom-50 vertical-align-cell">
 						<div class="row">
-							<div class="page-header-left">
-								<h1>OUR SERVICES</h1>
-							</div>
 							<div class="page-header-right">
+								<h1>השירותים שלנו</h1>
+							</div>
+							<!-- <div class="page-header-right">
 								<div class="bread-crumb-container">
 									<label>YOU ARE HERE:</label>
 									<ul class="bread-crumb">
@@ -549,7 +549,7 @@
 										</li>
 									</ul>
 								</div>
-							</div>
+							</div> -->
 						</div>
 					</div>
 				</div>
@@ -557,41 +557,41 @@
 					<div class="row">
 						<ul class="services-list clearfix padding-top-70">
 							<li>
-								<a href="service_engine_diagnostics.html" title="Engine Diagnostics">
+								<a href="#" title="דיאגנוסטיקת מנוע">
 									<img src="images/samples/390x260/image_01.jpg" alt="">
 								</a>
-								<h4 class="box-header"><a href="service_engine_diagnostics.html" title="Engine Diagnostics">ENGINE DIAGNOSTICS<span class="template-arrow-menu"></span></a></h4>
+								<h4 class="box-header"><a href="#" title="דיאגנוסטיקת מנוע">דיאגנוסטיקת מנוע<span class="template-arrow-menu"></span></a></h4>
 							</li>
 							<li>
-								<a href="service_lube_oil_filters.html" title="Lube, Oil and Filters">
+								<a href="#" title="Lube, Oil and Filters">
 									<img src="images/samples/390x260/image_02.jpg" alt="">
 								</a>
-								<h4 class="box-header"><a href="service_lube_oil_filters.html" title="Lube, Oil and Filters">LUBE, OIL AND FILTERS<span class="template-arrow-menu"></span></a></h4>
+								<h4 class="box-header"><a href="#" title="סיכה, שמן ופילטרים">סיכה, שמן ופילטרים<span class="template-arrow-menu"></span></a></h4>
 							</li>
-							<li>
-								<a href="service_belts_hoses.html" title="Belts and Hoses">
+							 <li>
+								<a href="#" title="רצועות הנעה וצינורות">
 									<img src="images/samples/390x260/image_03.jpg" alt="">
 								</a>
-								<h4 class="box-header"><a href="service_belts_hoses.html" title="Belts and Hoses">BELTS AND HOSES<span class="template-arrow-menu"></span></a></h4>
+								<h4 class="box-header"><a href="#" title="רצועות הנעה וצינורות">רצועות הנעה וצינורות<span class="template-arrow-menu"></span></a></h4>
 							</li>
 							<li>
-								<a href="service_air_conditioning.html" title="Air Conditioning">
+								<a href="#" title="Air Conditioning">
 									<img src="images/samples/390x260/image_04.jpg" alt="">
 								</a>
-								<h4 class="box-header"><a href="service_air_conditioning.html" title="Air Conditioning">AIR CONDITIONING<span class="template-arrow-menu"></span></a></h4>
+								<h4 class="box-header"><a href="#" title="מיזוג אוויר">מיזוג אוויר<span class="template-arrow-menu"></span></a></h4>
 							</li>
 							<li>
-								<a href="ervice_brake_repair.html" title="Brake Repair">
+								<a href="#" title="תיקוני בלמים">
 									<img src="images/samples/390x260/image_05.jpg" alt="">
 								</a>
-								<h4 class="box-header"><a href="ervice_brake_repair.html" title="Brake Repair">BRAKE REPAIR<span class="template-arrow-menu"></span></a></h4>
+								<h4 class="box-header"><a href="#" title="תיקוני בלמים">תיקוני בלמים<span class="template-arrow-menu"></span></a></h4>
 							</li>
-							<li>
+							<!-- <li>
 								<a href="service_tire_wheel.html" title="Tire and Wheel Services">
 									<img src="images/samples/390x260/image_06.jpg" alt="">
 								</a>
 								<h4 class="box-header"><a href="service_tire_wheel.html" title="Tire and Wheel Services">TIRE AND WHEEL SERVICES<span class="template-arrow-menu"></span></a></h4>
-							</li>
+							</li> -->
 						</ul>
 					</div>
 				</div>
@@ -601,40 +601,40 @@
 					<div class="column column-1-3">
 						<ul class="contact-details-list">
 							<li class="sl-small-location-map">
-								<p>Tucson, AZ 80210:<br>
-								501 Archwood Lane</p>
+								<p>יוסף קלאוזנר 29<br>
+								רמלה</p>
 							</li>
 						</ul>
 					</div>
 					<div class="column column-1-3">
 						<ul class="contact-details-list">
 							<li class="sl-small-phone-circle">
-								<p>Feel Free to Call Us Now<br>
-								08-9353422</p>
+								<p>צור איתנו קשר<br>
+									08-9353422</p>
 							</li>
 						</ul>
 					</div>
 					<div class="column column-1-3">
-						<ul class="contact-details-list">
+						 <ul class="contact-details-list">
 							<li class="sl-small-truck-tow">
-								<p>24/7 Roadside Assistance<br>
-								(520) 577 2725</p>
+								<p> תיקוני דרך<br>
+									בשעות פעילות המוסך</p>
 							</li>
 						</ul>
 					</div>
 				</div>
 				<div class="row row-4-4 top-border page-padding-top">
 					<div class="column column-1-4">
-						<h6 class="box-header">ABOUT US</h6>
+						<h6 class="box-header">אודות</h6>
 						<ul class="list simple margin-top-20">
-							<li>Tucson, Arizona 80210</li>
-							<li>501 Archwood Lane</li>
-							<li><span>Mobile:</span>08-9353422</li>
-							<li><span>Assistance:</span>(520) 577 2725</li>
-							<li><span>E-mail:</span><a href="mailto:aazmaor@walla.co.il">aazmaor@walla.co.il</a></li>
+							<li>יוסף קלאוזנר 29</li>
+							<li>רמלה</li>
+							<li><span></span>08-9353422</li>
+							<li><span></span>08-9353422</li>
+							<li><span></span><a href="mailto:aazmaor@walla.co.il">aazmaor@walla.co.il</a></li>
 						</ul>
 						<ul class="social-icons gray margin-top-26">
-							<li>
+							<!-- <li>
 								<a target="_blank" href="http://facebook.com/QuanticaLabs" class="social-facebook" title="facebook"></a>
 							</li>
 							<li>
@@ -645,24 +645,24 @@
 							</li>
 							<li>
 								<a href="https://pinterest.com/quanticalabs/" class="social-pinterest" title="pinterest"></a>
-							</li>
+							</li> -->
 						</ul>
 					</div>
 					<div class="column column-1-4">
-						<h6 class="box-header">OUR SERVICES</h6>
+						<h6 class="box-header">השירותים שלנו</h6>
 						<ul class="list margin-top-20">
-							<li class="template-bullet">Engine Diagnostics</li>
-							<li class="template-bullet">Lube, Oil and Filters</li>
-							<li class="template-bullet">Belts and Hoses</li>
-							<li class="template-bullet">Air Conditioning</li>
-							<li class="template-bullet">Brake Repair</li>
-							<li class="template-bullet">Tire and Wheel Services</li>
-							<li class="template-bullet">Other Car Services</li>
+							<li>סיכה, שמן ופילטרים</li>
+							<li>רצועות הנעה וצינורות</li>
+							<li>מיזוג אוויר</li>
+							<li>תיקוני בלמים</li>
+							<li>צמיגים</li>
+							<li>שירותי רכב אחרים</li>
 						</ul>
 					</div>
 					<div class="column column-1-4">
-						<h6 class="box-header">POPULAR TAGS</h6>
-						<ul class="taxonomies margin-top-30">
+
+						<h6 class="box-header"><br></h6>
+						<!-- <h6 class="box-header">תגית פופולריות</h6>
 							<li><a href="category.html" title="BELTS">BELTS</a></li>
 							<li><a href="category.html" title="BRAKES">BRAKES</a></li>
 							<li><a href="category.html" title="DIAGNOSTICS">DIAGNOSTICS</a></li>
@@ -674,24 +674,24 @@
 							<li><a href="category.html" title="SUSPENSION">SUSPENSION</a></li>
 							<li><a href="category.html" title="TIRES">TIRES</a></li>
 							<li><a href="category.html" title="TRANSMISSION">TRANSMISSION</a></li>
-						</ul>
+						</ul> -->
 					</div>
 					<div class="column column-1-4">
-						<h6 class="box-header">HOURS</h6>
+						<h6 class="box-header">שעות פעילות</h6>
 						<ul class="list simple margin-top-20">
-							<li><span>Monday:</span>7:30am - 5:30pm</li>
-							<li><span>Tuesday:</span>7:30am - 5:30pm</li>
-							<li><span>Wednesday:</span>7:30am - 5:30pm</li>
-							<li><span>Thursday:</span>7:30am - 5:30pm</li>
-							<li><span>Friday:</span>7:30am - 5:30pm</li>
-							<li><span>Saturday:</span>7:30am - 3:00pm</li>
-							<li><span>Sunday:</span>Closed</li>
+							<li><span>17:30 - 07:30</span>ראשון:</li>
+							<li><span>17:30 - 07:30</span>שני:</li>
+							<li><span>17:30 - 07:30</span>שלישי:</li>
+							<li><span>17:30 - 07:30</span>רביעי:</li>
+							<li><span>17:30 - 07:30</span>חמישי:</li>
+							<li><span>15:00 - 07:30</span>שישי:</li>
+							<li><span>סגור</span>שבת:</li>
 						</ul>
 					</div>
 				</div>
 			</div>
 			<div class="row align-center padding-top-bottom-30">
-				<span class="copyright">© Copyright 2015 <a href="http://themeforest.net/item/carservice-mechanic-auto-shop-template/12332985?ref=QuanticaLabs" title="Carservice Template" target="_blank">Carservice Template</a> by <a href="http://quanticalabs.com" title="QuanticaLabs" target="_blank">QuanticaLabs</a></span>
+				<span class="copyright">© כל הזכויות שמורות 2017 <a href="#" title="Carservice Template" target="_self">מוסך א.א.צ מאור</a></span>
 			</div>
 		</div>
 		<a href="#top" class="scroll-top animated-element template-arrow-up" title="Scroll to top"></a>
