--- a/index.html
+++ b/index.html
@@ -885,7 +885,7 @@
 						<ul class="list simple margin-top-20">
 							<li>יוסף קלאוזנר 29</li>
 							<li>רמלה</li>
-							<li><span></span>08-9353422</li>
+							<li><span></span><a href="tel:08-9353422">08-9353422</a></li>
 							<li><span></span><a href="mailto:aazmaor@walla.co.il">aazmaor@walla.co.il</a></li>
 						</ul>
 						<ul class="social-icons gray margin-top-26">
@@ -946,7 +946,7 @@
 				</div>
 			</div>
 			<div class="row align-center padding-top-bottom-30">
-				<span class="copyright">© כל הזכויות שמורות 2017 <a href="#" title="Carservice Template" target="_self">מוסך א.א.צ מאור</a></span>
+				<span class="copyright">© כל הזכויות שמורות 2018 <a href="#" title="Carservice Template" target="_self">מוסך א.א.צ מאור</a></span>
 			</div>
 		</div>
 		<a href="#top" class="scroll-top animated-element template-arrow-up" title="Scroll to top"></a>
