--- a/index.html
+++ b/index.html
@@ -785,7 +785,7 @@
 							<div class="row padding-left-right-100">
 								<h2 class="box-header page-margin-top-section">מוסך זוכה התוכנית ״יצאת צדיק״</h2>
 								<p class="description align-center">המוסך נבחן בתוכנית הטלויזיה ״יצאת צדיק״<br>ועבר את המבחן בהצלחה.</p>
-								<br><br><br><br><br><br><br>
+								<br><br><br><br><br><br><br><br><br><br><br><br><br>
 								<!-- <div class="row margin-top-30">
 									<div class="column column-1-3">
 										<ul class="list">
@@ -904,20 +904,20 @@
 						</ul>
 					</div>
 					<div class="column column-1-4">
-						<h6 class="box-header">השירותים שלנו</h6>
+						<h6 class="box-header">שירותי חשמל רכב</h6>
 						<ul class="list margin-top-20">
-							<li>סיכה, שמן ופילטרים</li>
-							<li>רצועות הנעה וצינורות</li>
+							<li>דיאגנוסטיקת מנוע</li>
 							<li>מיזוג אוויר</li>
-							<li>תיקוני בלמים</li>
-							<li>צמיגים</li>
-							<li>שירותי רכב אחרים</li>
 						</ul>
 					</div>
 					<div class="column column-1-4">
-
-						<h6 class="box-header"><br></h6>
-						<!-- <h6 class="box-header">תגית פופולריות</h6>
+						<h6 class="box-header">שירותי מכונאות</h6>
+						<ul class="list margin-top-20">
+						<li>טיפולים תקופתיים</li>
+						<li>סיכה, שמן ופילטרים</li>
+						<li>רצועות הנעה וצינורות</li>
+						<li>תיקוני בלמים</li>
+						<!--
 							<li><a href="category.html" title="BELTS">BELTS</a></li>
 							<li><a href="category.html" title="BRAKES">BRAKES</a></li>
 							<li><a href="category.html" title="DIAGNOSTICS">DIAGNOSTICS</a></li>
