--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
 											<a href="services.html" title="שירותים">
 												שירותים
 											</a>
-											<a href="#" class="template-arrow-menu"></a>
+											<!-- <a href="#" class="template-arrow-menu"></a>
 											<ul>
 												<li>
 													<a href="service_engine_diagnostics.html" title="דיאגנוסיטיקת מנוע">
@@ -375,13 +375,13 @@
 														החלפת צמיגים וגלגלים
 													</a>
 												</li>
-											</ul>
+											</ul> -->
 										</li>
 										<li>
 											<a href="galleries.html" title="Gallery">
 												גלריה
 											</a>
-											<a href="#" class="template-arrow-menu"></a>
+											<!-- <a href="#" class="template-arrow-menu"></a>
 											<ul>
 												<li>
 													<a href="gallery_engine_diagnostics.html" title="Engine Diagnostics">
@@ -423,9 +423,9 @@
 														Other Car Services
 													</a>
 												</li>
-											</ul>
+											</ul> -->
 										</li>
-										<li>
+										<!-- <li>
 											<a href="about.html" title="Pages">
 												עמודים
 											</a>
@@ -500,12 +500,12 @@
 											<a href="appointment.html" title="Appointment">
 												קביעת תור
 											</a>
-										</li>
+										</li> -->
 										<li class="left-flyout">
 											<a href="contact.html" title="Contact">
 												יצירת קשר
 											</a>
-											<a href="#" class="template-arrow-menu"></a>
+										<!--	<a href="#" class="template-arrow-menu"></a>
 											<ul>
 												<li>
 													<a href="contact.html" title="Contact Style 1">
@@ -515,7 +515,7 @@
 												<li>
 													<a href="contact_2.html" title="Contact Style 2">
 														Contact Style 2
-													</a>
+													</a> -->
 												</li>
 											</ul>
 										</li>
