--- a/services.html
+++ b/services.html
@@ -333,54 +333,54 @@
 								<div class="mobile-menu-divider"></div>
 								<nav>
 									<ul class="mobile-menu collapsible-mobile-submenus">
-										<li>
+										<li class="selected">
 											<a href="index.html" title="ראשי">
 												ראשי
 											</a>
 										</li>
-										<li class="selected">
-											<a href="services.html" title="Services">
-												Services
+										<li>
+											<a href="services.html" title="שירותים">
+												שירותים
 											</a>
-											<a href="#" class="template-arrow-menu"></a>
+											<!-- <a href="#" class="template-arrow-menu"></a>
 											<ul>
 												<li>
-													<a href="service_engine_diagnostics.html" title="Engine Diagnostics">
-														Engine Diagnostics
+													<a href="service_engine_diagnostics.html" title="דיאגנוסיטיקת מנוע">
+														דיאגנוסיטיקת מנוע
 													</a>
 												</li>
 												<li>
-													<a href="service_lube_oil_filters.html" title="Lube, Oil and Filters">
-														Lube, Oil and Filters
+													<a href="service_lube_oil_filters.html" title="שמנים, נוזלים ופילטרים">
+														שמנים, נוזלים ופילטרים
 													</a>
 												</li>
 												<li>
-													<a href="service_belts_hoses.html" title="Belts and Hoses">
-														Belts and Hoses
+													<a href="service_belts_hoses.html" title="חגורות ורצועות">
+														חגורות ורצועות
 													</a>
 												</li>
 												<li>
-													<a href="service_air_conditioning.html" title="Air Conditioning">
-														Air Conditioning
+													<a href="service_air_conditioning.html" title="מיזוג אוויר">
+														מיזוג אוויר
 													</a>
 												</li>
 												<li>
-													<a href="service_brake_repair.html" title="Brake Repair">
-														Brake Repair
+													<a href="service_brake_repair.html" title="תיקון ברקסים">
+														תיקון ברקסים
 													</a>
 												</li>
 												<li>
-													<a href="service_tire_wheel.html" title="Tire and Wheel Services">
-														Tire and Wheel Services
+													<a href="service_tire_wheel.html" title="החלפת צמיגים וגלגלים">
+														החלפת צמיגים וגלגלים
 													</a>
 												</li>
-											</ul>
+											</ul> -->
 										</li>
 										<li>
 											<a href="galleries.html" title="Gallery">
-												Gallery
+												גלריה
 											</a>
-											<a href="#" class="template-arrow-menu"></a>
+											<!-- <a href="#" class="template-arrow-menu"></a>
 											<ul>
 												<li>
 													<a href="gallery_engine_diagnostics.html" title="Engine Diagnostics">
@@ -422,11 +422,11 @@
 														Other Car Services
 													</a>
 												</li>
-											</ul>
+											</ul> -->
 										</li>
-										<li>
+										<!-- <li>
 											<a href="about.html" title="Pages">
-												Pages
+												עמודים
 											</a>
 											<a href="#" class="template-arrow-menu"></a>
 											<ul>
@@ -440,7 +440,7 @@
 														404 Not Found
 													</a>
 												</li>
-												<li class="selected">
+												<li>
 													<a href="services.html" title="Services">
 														Services
 													</a>
@@ -464,7 +464,7 @@
 										</li>
 										<li>
 											<a href="blog.html" title="Blog">
-												Blog
+												בלוג
 											</a>
 											<a href="#" class="template-arrow-menu"></a>
 											<ul>
@@ -497,14 +497,14 @@
 										</li>
 										<li>
 											<a href="appointment.html" title="Appointment">
-												Appointment
+												קביעת תור
 											</a>
-										</li>
+										</li> -->
 										<li class="left-flyout">
 											<a href="contact.html" title="Contact">
-												Contact
+												יצירת קשר
 											</a>
-											<a href="#" class="template-arrow-menu"></a>
+										<!--	<a href="#" class="template-arrow-menu"></a>
 											<ul>
 												<li>
 													<a href="contact.html" title="Contact Style 1">
@@ -514,7 +514,7 @@
 												<li>
 													<a href="contact_2.html" title="Contact Style 2">
 														Contact Style 2
-													</a>
+													</a> -->
 												</li>
 											</ul>
 										</li>
@@ -524,8 +524,7 @@
 						</div>
 					</div>
 				</div>
-			</div>
-			<div class="theme-page padding-bottom-70">
+			</div>			<div class="theme-page padding-bottom-70">
 				<div class="row gray full-width page-header vertical-align-table">
 					<div class="row full-width padding-top-bottom-50 vertical-align-cell">
 						<div class="row">
