--- a/services.html
+++ b/services.html
@@ -41,7 +41,7 @@
 							א׳- ה׳ : 7:30 - 17:00 ו׳ : 7:30-14:00
 						</li>
 					</ul>
-					<div class="search-container">
+					<!--<div class="search-container">
 						<a class="template-search" href="#" title="Search"></a>
 						<form class="search" action="search.html">
 							<input type="text" name="s" placeholder="Search..." value="Search..." class="search-input hint">
@@ -50,9 +50,9 @@
 								<input type="submit" class="search-submit" value="">
 							</fieldset>
 						</form>
-					</div>
+					</div> -->
 					<ul class="social-icons">
-						<li>
+						<!-- <li>
 							<a target="_blank" href="http://facebook.com/QuanticaLabs" class="social-facebook" title="facebook"></a>
 						</li>
 						<li>
