--- a/index.html
+++ b/index.html
@@ -778,7 +778,7 @@
 					<div class="row full-width gray flex-box page-margin-top-section">
 						<div class="column column-1-2 background-1">
 							<a class="flex-hide" href="service_engine_diagnostics.html" title="Tiling and Painting">
-								<img src="images/samples/960x680/image_01.jpg" alt="">
+								<img src="images/righteous.jpg" alt="">
 							</a>
 						</div>
 						<div class="column column-1-2 padding-bottom-66">
