--- a/index.html
+++ b/index.html
@@ -740,7 +740,7 @@
 					<div class="row page-margin-top-section">
 						<div class="row">
 							<h2 class="box-header">מדוע לבחור בנו?</h2>
-							<p class="description align-center">המוסך בעל ותק של מעל 40 שנים.<br>מתמחים במכונאות כללית, חשמל ומיזוג אוויר.</p>
+							<p class="description align-center">המוסך בעל ותק של מעל 30 שנים.<br>מתמחים במכונאות כללית, חשמל ומיזוג אוויר.</p>
 							<div class="row page-margin-top">
 								<div class="column column-1-3">
 									<ul class="features-list big">
@@ -946,7 +946,7 @@
 				</div>
 			</div>
 			<div class="row align-center padding-top-bottom-30">
-				<span class="copyright">© כל הזכויות שמורות 2018 <a href="#" title="Carservice Template" target="_self">מוסך א.א.צ מאור</a></span>
+				<span class="copyright">© כל הזכויות שמורות <a href="#" title="מוסך א.א.צ מאור" target="_self">מוסך א.א.צ מאור</a></span>
 			</div>
 		</div>
 		<a href="#top" class="scroll-top animated-element template-arrow-up" title="Scroll to top"></a>
