--- a/services.html
+++ b/services.html
@@ -689,7 +689,7 @@
 				</div>
 			</div>
 			<div class="row align-center padding-top-bottom-30">
-				<span class="copyright">© כל הזכויות שמורות 2018 <a href="#" title="Carservice Template" target="_self">מוסך א.א.צ מאור</a></span>
+				<span class="copyright">© כל הזכויות שמורות <a href="#" title="מוסך א.א.צ מאור" target="_self">מוסך א.א.צ מאור</a></span>
 			</div>
 		</div>
 		<a href="#top" class="scroll-top animated-element template-arrow-up" title="Scroll to top"></a>
