--- a/services.html
+++ b/services.html
@@ -32,7 +32,7 @@
 				<div class="header-top-bar">
 					<ul class="contact-details clearfix">
 						<li class="template-phone">
-							08-9240680
+							<a href="tel:08-9240680">08-9240680</a>
 						</li>
 						<li class="template-mail">
 							<a href="mailto:aazmaor@walla.co.il">aazmaor@walla.co.il</a>
