--- a/index.html
+++ b/index.html
@@ -883,10 +883,10 @@
 					</div>
 					<div class="column column-1-3">
 						 <ul class="contact-details-list">
-							<li class="sl-small-truck-tow">
+					<!--		<li class="sl-small-truck-tow">
 								<p> תיקוני דרך<br>
 									בשעות פעילות המוסך</p>
-							</li>
+							</li> -->
 						</ul>
 					</div>
 				</div>
