--- a/services.html
+++ b/services.html
@@ -627,7 +627,7 @@
 					</div>
 					<div class="column column-1-3">
 						<ul class="contact-details-list">
-							<!- <li class="sl-small-truck-tow">
+							<!--  <li class="sl-small-truck-tow">
 								<p> תיקוני דרך<br>
 									בשעות פעילות המוסך</p>
 							</li> -->
