--- a/contact.html
+++ b/contact.html
@@ -700,5 +700,7 @@
 		<script type="text/javascript" src="//maps.google.com/maps/api/js?key=AIzaSyBYAM1Hj4k_N476ga2-NhvRZzjuY9xkaes"></script>
 		<script type="text/javascript" src="js/main.js"></script>
 		<script type="text/javascript" src="js/odometer.min.js"></script>
+		<!-- Accessibility script -->
+		<script src="https://cdn.enable.co.il/licenses/enable-L1389mkjlwhnvc2-0218-3101/init.js"></script>
 	</body>
 </html>
