--- a/galleries.html
+++ b/galleries.html
@@ -807,5 +807,7 @@
 		<script type="text/javascript" src="js/jquery.blockUI.min.js"></script>
 		<script type="text/javascript" src="js/main.js"></script>
 		<script type="text/javascript" src="js/odometer.min.js"></script>
+		<!-- Accessibility script -->
+		<script src="https://cdn.enable.co.il/licenses/enable-L1389mkjlwhnvc2-0218-3101/init.js"></script>
 	</body>
 </html>
